--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+
+  "name": "TL-Booking_MERN",
+  "version": "1.0.0",
+  "description": "TL-Booking_MERN",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+
+  "author": "Anmol Kumar",
+  "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
