--- a/package.json
+++ b/package.json
@@ -1,48 +1,27 @@
 {
-
-  "name": "TLBookingMERN",
-
-  "version": "1.0.0",
-
-  "description": "TL-Booking_MERN",
-
-  "main": "app.js",
-
-  "scripts": {
-
-    "start": "node app.js",
-
-    "test": "echo \"Error: no test specified\" && exit 1"
-
-  },
-
-  "author": "Anmol Kumar",
-
-  "license": "ISC",
-
-  "dependencies": {
-
-    "body-parser": "^1.20.2",
-
-    "ejs": "^3.1.9",
-
-    "express": "^4.18.2",
-
-    "googleapis": "^122.0.0",
-
-    "moment": "^2.29.4",
-
-    "moment-timezone": "^0.5.43",
-
-    "momentjs": "^2.0.0",
-
-    "mongodb": "^5.7.0",
-
-    "mongoose": "^7.3.4",
-
-    "nodemailer": "^6.9.3"
-
-  }
-
+    "name": "TLBookingMERN",
+    "version": "1.0.0",
+    "description": "TL-Booking_MERN",
+    "main": "app.js",
+    "scripts": {
+        "start": "node app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Anmol Kumar",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "google-auth-library": "^9.0.0",
+        "googleapis": "^122.0.0",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.43",
+        "momentjs": "^2.0.0",
+        "mongodb": "^5.7.0",
+        "mongoose": "^7.3.4",
+        "nodemailer": "^6.9.3"
+    }
 }
-
