--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Anmol Kumar",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.3.1",
@@ -17,11 +18,12 @@
         "express": "^4.18.2",
         "google-auth-library": "^9.0.0",
         "googleapis": "^122.0.0",
+        "jsonwebtoken": "^9.0.1",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.43",
         "momentjs": "^2.0.0",
         "mongodb": "^5.7.0",
-        "mongoose": "^7.3.4",
+        "mongoose": "^7.4.2",
         "nodemailer": "^6.9.3"
     }
 }
